Fix corner overflow on Chrome

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -29,14 +29,14 @@
   width: 20%;
 }
 .avatar {
-   /* Colors defined in controllers */
-   width: 50px;
-   height: 50px;
-   margin: 0px 10px;
-   border-radius: 12.5px;
-   border: solid 3px #111;
-   overflow: hidden;
-   position: relative;/* For kids */
+    /* Colors defined in controllers */
+    width: 50px;
+    height: 50px;
+    margin: 0px 10px;
+    border-radius: 12.5px;
+    border: solid 3px #111;
+    overflow: hidden;
+    position: relative;/* For kids */
 }
 .avatar .square {
    position: absolute;
@@ -44,18 +44,22 @@
    height: 25px;
 }
 .avatar .square:nth-of-type(1) {
+   border-radius: 9.5px 0 0 0;
    top: 0;
    left: 0;
 }
 .avatar .square:nth-of-type(2) {
+   border-radius: 0 9.5px 0 0;
    top: 0px;
    left: 25px;
 }
 .avatar .square:nth-of-type(3) {
+   border-radius: 0 0 0 9.5px;
    top: 25px;
    left: 0px;
 }
 .avatar .square:nth-of-type(4) {
+   border-radius: 0 0 9.5px 0;
    top: 25px;
    left: 25px;
 }
